[gd_scene load_steps=3 format=3 uid="uid://cvkkp8diqjwdl"]

[ext_resource type="Theme" uid="uid://cx4ebwibnxeqt" path="res://assets/themes/main.tres" id="1_1x6ak"]
[ext_resource type="Script" uid="uid://dxwexpa3uahx6" path="res://entities/hud/player_dead_ui/player_dead_ui.gd" id="1_l63m3"]

[node name="PlayerDeadUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_1x6ak")
script = ExtResource("1_l63m3")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.176471)

[node name="RespawnButton" type="Button" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -42.0
offset_top = -15.5
offset_right = 42.0
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 24
text = "Respawn"

[node name="YouDied" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -98.0
offset_top = -124.0
offset_right = 98.0
offset_bottom = -72.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 64
text = "You died"

[node name="DeathCause" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -140.0
offset_top = -74.0
offset_right = 140.0
offset_bottom = -48.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "hit by a Goblin"
horizontal_alignment = 1

[node name="ShowRespawnButtonTimer" type="Timer" parent="."]

[connection signal="pressed" from="RespawnButton" to="." method="_on_respawn_button_pressed"]
